# hackathon-AI-chatbot

./: .env  .env.example  .gitignore  README.md  pyproject.toml  start.bat
src/AIchatCLI/: cli.py  client.py  config.py
